--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Landing Page
-subTitle: A Template by Start Bootstrap
+title: Rotary Club of Panama City Beach
+subTitle: Home of the World's Most Beautiful Beaches
 ---
